--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "^6.4.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "fast-deep-equal": "^3.1.3",
     "fetch-event-stream": "^0.1.5",
     "framer-motion": "^12.4.2",
     "jsonwebtoken": "^9.0.2",
@@ -34,8 +36,7 @@
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0",
     "usehooks-ts": "^3.1.1",
-    "vega-lite": "^5.23.0",
-    "fast-deep-equal": "^3.1.3"
+    "vega-lite": "^5.23.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
